--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,48 +2,159 @@
 @tailwind components;
 @tailwind utilities;
 
-body,html{
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+body,
+html {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
 }
-
-.scrollDiv::-webkit-scrollbar{
-  position            : relative;
-    background          : transparent;
-    width              : 5px;
-    border-radius       : 4px;
-    /* top                 : 10px; */
-    /* bottom: 10px; */
-    z-index             : 2;
-    cursor              : pointer;
-    opacity: 1;
-    transition: opacity 0.25s linear;
-    right: -15px;
-  }
-.scrollDiv::-webkit-scrollbar-thumb{
+html::-webkit-scrollbar{
+  position: relative;
+  background: transparent;
+  width: 5px;
+  height: 5px;
+  border-radius: 4px;
+  /* top                 : 10px; */
+  /* bottom: 10px; */
+  z-index: 2;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.25s linear;
+  /* margin: 5px; */
+}
+html::-webkit-scrollbar-thumb {
   background: #62646f;
   border-radius: 10px;
   /* height: 220px; */
 }
 
-.h-content{
+.scrollDiv::-webkit-scrollbar {
+  position: relative;
+  background: transparent;
+  width: 5px;
+  border-radius: 4px;
+  /* top                 : 10px; */
+  /* bottom: 10px; */
+  z-index: 2;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.25s linear;
+  right: -15px;
+}
+
+.scrollDiv::-webkit-scrollbar-thumb {
+  background: #62646f;
+  border-radius: 10px;
+  /* height: 220px; */
+}
+
+.h-content {
   height: fit-content;
 }
 
 .ReactModal__Overlay {
   opacity: 0;
-  transition:opacity 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out;
 }
 
-.ReactModal__Overlay--after-open{
+.ReactModal__Overlay--after-open {
   opacity: 1;
 }
 
-.ReactModal__Overlay--before-close{
+.ReactModal__Overlay--before-close {
   opacity: 0;
 }
+
+.flipVideo {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.pulseDiv{
+  display: flex;
+  width: 100%;
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* z-index: -2; */
+  background: rgb(16, 121, 249);
+  animation: pluse 500ms infinite;
+  border-radius: 0.75rem;
+}
+
+@keyframes pluse {
+  0%{
+    transform: scaleX(0.95) scaleY(0.95);
+    opacity: 1;
+  }
+  100%{
+    transform: scaleY(1.05) scaleX(1.025);
+    opacity: 0;
+  }
+}
+
+/* @-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(16, 121, 249, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(16, 121, 249, 0.4);
+    box-shadow: 0 0 0 0 rgba(16, 121, 249, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+      box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+      box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+  }
+} */
+.hiddenImp{
+  display: none !important;
+}
+
+.barlevel1  { height: 10%;}
+.barlevel2  { height: 20%;}
+.barlevel3  { height: 30%;}
+.barlevel4  { height: 40%;}
+.barlevel5  { height: 49.5%;}
+.barlevel6  { height: 59.5%;}
+.barlevel7  { height: 69%;}
+.barlevel8  { height: 79%;}
+.barlevel9  { height: 88%;}
+.barlevel10 { height: 95%;}
+.barlevel0  { height: 0;}
+
+.barsmallLevel1  { height: 6%;}
+.barsmallLevel2  { height: 12%;}
+.barsmallLevel3  { height: 18%;}
+.barsmallLevel4  { height: 24%;}
+.barsmallLevel5  { height: 30%;}
+.barsmallLevel6  { height: 36%;}
+.barsmallLevel7  { height: 42%;}
+.barsmallLevel8  { height: 48%;}
+.barsmallLevel9  { height: 54%;}
+.barsmallLevel10 { height: 60%;}
+.barsmallLevel0  { height: 0;}
