--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,3 +158,7 @@ html::-webkit-scrollbar-thumb {
 .barsmallLevel9  { height: 65.8%;}
 .barsmallLevel10 { height: 70%;}
 .barsmallLevel0  { height: 0;}
+
+.fileInput{
+  
+}
